# LearnOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake
shaders/: shader.fs  shader.vs
src/: Main.cpp  Shader.cpp  Shader.h
